force-app/main/default/objects/Candidate__c/Candidate__c.object-meta.xml
<CustomObject>
    <description>Store Data Of candidate who apply for Job</description>
    <label>Candidate</label>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Candidate ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>