force-app/main/default/objects/Candidate__c/fields/Adhar_Number__c.field-meta.xml
<CustomField>
    <fullName>Adhar_Number__c</fullName>
    <label>Adhar Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>