force-app/main/default/objects/Candidate__c/fields/Are_you_US_Citizen__c.field-meta.xml
<CustomField>
    <fullName>Are_you_US_Citizen__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you US Citizen</label>
    <type>Checkbox</type>
</CustomField>