force-app/main/default/objects/Candidate__c/fields/Do_you_need_Viza__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_Viza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you need Viza</label>
    <type>Checkbox</type>
</CustomField>