force-app/main/default/objects/Candidate__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech/BE</fullName>
            </value>
            <value>
                <fullName>MAlMS/MBA</fullName>
            </value>
            <value>
                <fullName>ME/M.Tech</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>Diploma</fullName>
            </value>
            <value>
                <fullName>Any Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>