force-app/main/default/objects/Candidate__c/fields/GState__c.field-meta.xml
<CustomField>
    <fullName>GState__c</fullName>
    <label>GState</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assam</fullName>
            </value>
            <value>
                <fullName>Bihar</fullName>
            </value>
            <value>
                <fullName>Chhattisgarh</fullName>
            </value>
            <value>
                <fullName>Goa</fullName>
            </value>
            <value>
                <fullName>Gujarat</fullName>
            </value>
            <value>
                <fullName>Haryana</fullName>
            </value>
            <value>
                <fullName>Punjab</fullName>
            </value>
            <value>
                <fullName>Sindh</fullName>
            </value>
            <value>
                <fullName>Khyber Pakhtunkhw</fullName>
            </value>
            <value>
                <fullName>Balochistan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>