force-app/main/default/objects/Candidate__c/fields/Link_of_trailhead__c.field-meta.xml
<CustomField>
    <fullName>Link_of_trailhead__c</fullName>
    <formula>HYPERLINK(&quot;https://www.salesforce.com/trailblazer/&quot; , Trailhead_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link of trailhead</label>
    <type>Text</type>
</CustomField>