force-app/main/default/objects/Candidate__c/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <label>SSN</label>
    <length>50</length>
    <maskChar>X</maskChar>
    <maskType>creditCard</maskType>
    <required>true</required>
    <type>EncryptedText</type>
</CustomField>