force-app/main/default/objects/Candidate__c/fields/Technical_Skill__c.field-meta.xml
<CustomField>
    <fullName>Technical_Skill__c</fullName>
    <label>Technical Skill</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Apex</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
            <value>
                <fullName>Lighting Component</fullName>
            </value>
            <value>
                <fullName>Visualforce Page</fullName>
            </value>
            <value>
                <fullName>Salesforce Admin</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>