force-app/main/default/objects/Candidate__c/fields/Trailhead_Id__c.field-meta.xml
<CustomField>
    <fullName>Trailhead_Id__c</fullName>
    <label>Trailhead Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>