force-app/main/default/objects/Candidate__c/recordTypes/IT_Candidate.recordType-meta.xml
<RecordType>
    <fullName>IT_Candidate</fullName>
    <active>true</active>
    <label>IT Candidate</label>
</RecordType>