force-app/main/default/objects/Candidate__c/recordTypes/Non_IT_Candidate.recordType-meta.xml
<RecordType>
    <fullName>Non_IT_Candidate</fullName>
    <active>true</active>
    <label>Non IT Candidate</label>
</RecordType>