force-app/main/default/objects/Candidate__c/validationRules/first_last_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>first_last_Name</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISBLANK( First_Name__c ) ,ISBLANK(  Last_Name__c  ))</errorConditionFormula>
    <errorMessage>First Name and Last Name is required</errorMessage>
</ValidationRule>