force-app/main/default/objects/Candidate__c/validationRules/Phone_Number_validation_1.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_validation_1</fullName>
    <active>true</active>
    <errorConditionFormula>OR(   ISBLANK( Phone__c  ), 
          NOT(ISNUMBER(Phone__c ) ) , 
          LEN(Phone__c ) !=   10
     )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Phone Number is required and It must be 10 Digit</errorMessage>
</ValidationRule>