force-app/main/default/objects/Candidate__c/validationRules/Phone_Number_validation_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number_validation_2</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( REGEX( Phone__c , &quot;[7-9]{1}[0-9]{9}&quot;) )</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Enter Correct Format of Number</errorMessage>
</ValidationRule>