force-app/main/default/objects/Candidate__c/validationRules/US_Visa.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Visa</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Are_you_US_Citizen__c , Do_you_need_Viza__c )</errorConditionFormula>
    <errorMessage>If your are a US Citizen then No need US Visa</errorMessage>
</ValidationRule>